@@ -4,6 +4,8 @@ Changes
 1.1.7 (TBD)
 -----------
 
+- Wrap calls to GDALChecksumImage so that errors set by GDAL are propagated to
+  Python as a RasterioIOError.
 - Raise RasterioDeprecationWarning when a dataset opened in modes other than
   'r' is given to the WarpedVRT constructor.
 - Base RasterioDeprecationWarning on FutureWarning, following the
